Version: 3.0.20
Date: ????-??-??
  Changes:
    - Anthracene + Hydrogen -> Gasoline recipe can now be used in automation science. Resolves https://github.com/pyanodon/pybugreports/issues/1066
---------------------------------------------------------------------------------------------------
Version: 3.0.19
Date: 2025-07-20
  Changes:
    - Aromatic plastic recipe now fixed with medium py
---------------------------------------------------------------------------------------------------
Version: 3.0.18
Date: 2025-06-29
  Changes:
    - Fixed unknown key issues in bitumen seep extraction. Resolves https://github.com/pyanodon/pybugreports/issues/989
---------------------------------------------------------------------------------------------------
Version: 3.0.17
Date: 2025-06-10
  Changes:
    - Resolved crash.
---------------------------------------------------------------------------------------------------
Version: 3.0.16
Date: 2025-6-1
  Changes:
    - Allowed productivity in advanced engine unit recipe.
    - Halfed the volume of regenerative heat exchangers. Resolves https://github.com/pyanodon/pybugreports/issues/951
    - Reduced the hot air requirement in coalbed -> acidgas from 500 -> 250.
    - Reduced hotair requirement in coalbed -> refined syngas recipe from 500 -> 300.
---------------------------------------------------------------------------------------------------
Version: 3.0.15
Date: 2025-4-13
  Changes:
    - Changed the color of naphthalene oil. Resolves https://github.com/pyanodon/pybugreports/issues/899
    - Added description text for various items & fluids
    - Moved the unlock for light oil refinery MK01 from py1 to logi science. Resolves https://github.com/pyanodon/pybugreports/issues/934
    - Fixed including tanks in a blueprint would cause the entire blueprint to be unrotatable. Resolves https://github.com/pyanodon/pybugreports/issues/920