@@ -1,3 +1,8 @@
+Version: ???
+Date: ???
+  Changes:
+    - Efficiency modules disabled for sulfur mines
+---------------------------------------------------------------------------------------------------
 Version: 3.0.20
 Date: ????-??-??
   Changes:
